--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  * Version: 	1.0.8
  * Author: 		ThemesBros.com
  * Author URI: 	http://www.themesbros.com
- * Tags:        green, white, one-column, two-columns, responsive-layout, left-sidebar, right-sidebar, featured-images, custom-menu, threaded-comments, translation-ready, theme-options, sticky-post
+ * Tags:        green, white, one-column, two-columns, responsive-layout, left-sidebar, right-sidebar, featured-images, custom-menu, threaded-comments, translation-ready, theme-options, sticky-post, rtl-language-support
  * Text Domain: mosalon
  * License:     GNU General Public License v2.0 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
