--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  * Theme Name: 	Mosalon
  * Theme URI: 	http://www.themesbros.com/mosalon-landing-page-wordpress-theme/
  * Description: Mosalon is a multipurpose responsive landing page theme, designed to help you effectively launch your new product, service, website... Theme is built on the rock-solid Hybrid Core theme framework, with search-engine optimization (SEO) in mind by utilizing the most current HTML5 conventions and Schema.org microdata. It come's packed with ton's of options, multiple layouts, and more. View demo here: http://www.themesbros.com/demo/mosalon/.
- * Version: 	1.1.1
+ * Version: 	1.1.2
  * Author: 		ThemesBros.com
  * Author URI: 	http://www.themesbros.com
  * Tags:        green, white, one-column, two-columns, responsive-layout, left-sidebar, right-sidebar, featured-images, custom-menu, threaded-comments, translation-ready, theme-options, sticky-post, rtl-language-support
@@ -1515,27 +1515,29 @@ a:active {
 	line-height: 1.32;
 }
 
-#mosalon-checklist li:before {
-	position: relative;
-	float: left;
-	content: "\f14a";
-	font-size: 30px;
-	font-family: FontAwesome;
-<<<<<<< HEAD
-	top: 3px;
-=======
-	top: -8px;
->>>>>>> 1.1
-	margin-right: 18px;
+#mosalon-checklist ul {
+	list-style: none;
 }
 
 #mosalon-checklist li {
-	font-size: 19px;
-<<<<<<< HEAD
-=======
 	clear: both;
->>>>>>> 1.1
 	margin-bottom: 2px;
+	font-size: 19px;
+}
+
+#mosalon-checklist li p {
+	display: inline-block;
+	margin-bottom: 10px;
+}
+
+#mosalon-checklist i {
+	float: left;
+	margin-top: -3px;
+	margin-right: 18px;
+	font-size: 30px;
+}
+
+#mosalon-checklist span {
 }
 
 #mosalon-newsletter {
@@ -1851,6 +1853,7 @@ a:active {
 		margin: 0 auto 30px;
 		text-align: center;
 	}
+	#mosalon-checklist ul { text-align: left; }
 	#mosalon-countdown .ct-col {
 		float: none;
 		margin-bottom: 15px;
